src/objects/B2B_Partner__c.object
<CustomObject>
    <fields>
        <fullName>B2B_Partner_Id__c</fullName>
        <label>B2B Partner Id</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Partner_Name__c</fullName>
        <label>B2B Partner Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Partner_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B2B Partner Status</label>
        <type>Checkbox</type>
    </fields>
    <label>B2B Partner</label>
    <nameField>
        <displayFormat>BPRN-{00000000}</displayFormat>
        <label>B2B Partner Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>